# bogue-inkscape

./: README.md  bogue-inkscape.opam  dune-project
lib/: bogue_inkscape.ml  convert_inkscape.ml  dune  old_write.ml  parse_inkscape.ml  sanitize.ml  write_bogue.ml
test/: dune  test_bogue_inkscape.ml
